...
  // Suscripción al stream de cambios en los productos
  StreamSubscription<QuerySnapshot>? _productSubscription;

  final List<Map<String, dynamic>> _menuItems = [
    {
      "icon": FontAwesomeIcons.cashRegister,
      "text": "Venta",
      "desc": "Realiza una venta fácilmente",
      "route": "/venta",
      "color": Colors.orange
    },
    {
      "icon": FontAwesomeIcons.warehouse,
      "text": "Almacenes",
      "desc": "Administra tus almacenes",
      "route": "/almacenes",
      "color": Colors.purple
    },
    {
      "icon": FontAwesomeIcons.layerGroup,
      "text": "Categorías",
      "desc": "Organiza tus productos por categorías",
      "route": "/categorias",
      "color": Colors.red
    },
    {
      "icon": FontAwesomeIcons.boxOpen,
      "text": "Productos",
      "desc": "Consulta y gestiona tus productos",
      "route": "/productos",
      "color": Colors.green
    },
  ];

...
    );
  }

  PreferredSizeWidget _buildAppBar() {
    return AppBar(
      title: const Text(
        'Bienvenido',
        style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
      ),
      actions: [
        // Icono de notificaciones con badge
        Stack(
          children: [
...
